--- a/main.css
+++ b/main.css
@@ -147,7 +147,6 @@ ul > li:before {
 .row {
   display: flex;
   padding: 3rem 0;
-  border-bottom: 1px solid #eeeeee;
 }
 
 .row-left {
@@ -227,4 +226,57 @@ ul > li:before {
   color: #666;
   font-size: 0.9em;
   margin-left: 8px;
+}
+
+.profile-section {
+  margin: 2rem 0;
+  /* padding: 2rem 0; */
+}
+
+.profile-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 2rem;
+  flex-direction: row;
+}
+
+.profile-info {
+  flex: 1;
+}
+
+.profile-image {
+  margin-left: 2rem;
+  width: 200px;
+  height: 200px;
+  background-image: url('profile-image.png');
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.name {
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
+}
+
+.contact-info {
+  display: flex;
+  margin-bottom: 2rem;
+  flex-direction: column;
+}
+
+.contact-info p {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.introduction {
+  line-height: 1.8;
+}
+
+.highlight {
+  display: inline-block;
+  margin: 0.5rem 0;
 }
